# bulletdicegl-1_6

./: .~lock.sdl2blenderwriteup.odt#  CHANGELOG.txt  CMakeLists.txt  KEYMAP.txt  README.txt  bulletdicegl-1_6.kdev4  bulletdicegl-1_6writeup.odt
assimpopengl/: CHANGELOG.txt  CMakeLists.txt  README.txt
assimpopengl/.kdev4/: assimpopengl.kdev4
assimpopengl/LGPL/: notice.txt
assimpopengl/include/: CMakeLists.txt  assimpopengl.h  commonheader.h  createimage.h  info.h  mesh.h  meshtex.h  meshvert.h  model.h  shader.h
assimpopengl/src/: CMakeLists.txt  createimage.cpp  mesh.cpp  meshtex.cpp  meshvert.cpp  model.cpp  shader.cpp
include/: .commonheader.h.kate-swp  bulletdicegl.h  camera.h  commonheader.h  diceroll.h  fallingbody.h
openglresources/dice/: dice.blend  dice.blend1  dice.mtl
openglresources/objects/: dice.blend  dice.blend1
openglresources/shaders/: bulletshader.bak  bulletshader.frag  bulletshader.frag.orig  bulletshader.frag.orig~  bulletshader.frag~  bulletshader.vs  dicestage.frag  dicestage.frag~  dicestage.vs  dicestage.vs~  skyboxshader.frag  skyboxshader.frag~  skyboxshader.vs
openglresources/sound/: .directory
src/: CMakeLists.txt  bulletdicegl.cpp  diceroll.cpp  fallingbody.cpp
